Fix CORS, Stripe redirect, and add Clean Code refactoring