@@ -1,20 +1,24 @@
 package com.anyservice.backend.config;
 
 import com.anyservice.backend.security.JwtAuthenticationFilter;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-
-import java.util.Arrays;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
+import java.util.List;
+
+/** Configures HTTP security, CORS policy, and JWT filter chain. */
 @Configuration
 @EnableWebSecurity
 public class SecurityConfiguration {
@@ -22,43 +26,48 @@ public class SecurityConfiguration {
     private final JwtAuthenticationFilter jwtAuthFilter;
     private final AuthenticationProvider authenticationProvider;
 
+    @Value("${app.base-url:http://localhost:4200}")
+    private String appBaseUrl;
+
     public SecurityConfiguration(JwtAuthenticationFilter jwtAuthFilter, AuthenticationProvider authenticationProvider) {
         this.jwtAuthFilter = jwtAuthFilter;
         this.authenticationProvider = authenticationProvider;
     }
 
+    /** Defines the security filter chain with public/private route rules. */
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Habilita o CORS
-            .csrf(csrf -> csrf.disable()) // Desabilita proteção CSRF (não necessária para APIs com JWT)
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .csrf(csrf -> csrf.disable())
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/api/auth/**").permitAll() // Libera acesso público às rotas de login/registro
-                .requestMatchers(org.springframework.http.HttpMethod.GET, "/api/services").permitAll() // Libera a vitrine de serviços
-                .requestMatchers("/api/webhooks/**").permitAll() // Libera os webhooks do Stripe
-                .requestMatchers("/uploads/**").permitAll() // Libera as fotos de perfil
-                .requestMatchers("/error").permitAll() // Libera o endpoint de erros padrão do Spring Boot
-                .anyRequest().authenticated() // Bloqueia qualquer outra rota (exige token)
+                .requestMatchers("/api/auth/**").permitAll()
+                .requestMatchers(HttpMethod.GET, "/api/services/**").permitAll()
+                .requestMatchers("/api/webhooks/**").permitAll()
+                .requestMatchers("/uploads/**").permitAll()
+                .requestMatchers("/error").permitAll()
+                .anyRequest().authenticated()
             )
             .sessionManagement(sess -> sess
-                .sessionCreationPolicy(SessionCreationPolicy.STATELESS) // O Spring não vai guardar sessão em memória
+                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
             )
-            .authenticationProvider(authenticationProvider) // Usa o provedor que configuramos (com BCrypt e email)
-            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class); // Adiciona nosso filtro JWT antes do filtro padrão do Spring
+            .authenticationProvider(authenticationProvider)
+            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
+    /** Configures CORS to allow requests from the frontend origin defined in app.base-url. */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200")); // Permite o Angular
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Permite estes métodos HTTP
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type")); // Permite envio de Token e JSON
+        configuration.setAllowedOrigins(List.of(appBaseUrl));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
         configuration.setAllowCredentials(true);
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); // Aplica o CORS em todas as rotas da API
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 }
